--- a/style.css
+++ b/style.css
@@ -5,12 +5,12 @@
 
 .navbar{
 	border-radius: 0px;
-	background-color: rgba(0,0,0,0.8);
+	background-color: rgba(0,0,0,0.6);
 }
 
 .navbar-brand{
   font-size: 35px;
-  color: white;
+  color: PaleGoldenrod;
   padding-left: 25px;
 }
 
@@ -36,7 +36,7 @@
 }
 
 .icon-bar{
-	background-color: white;
+	background-color: PaleGoldenrod;
 }
 
 
