--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
 
 .navbar-brand{
   font-size: 35px;
-  color: PaleGoldenrod;
+  color: SteelBlue;
   padding-left: 25px;
 }
 
@@ -36,14 +36,14 @@
 }
 
 .icon-bar{
-	background-color: PaleGoldenrod;
+	background-color: white;
 }
 
 
 .main-title{
   margin-bottom: 15px;
   text-align: center;
-  color: #EEE8AA;
+  color: #FF4500;
   font-size: 50px;
   font-family: "Comic Sans MS", cursive, sans-serif;
   font-weight: bold;
@@ -65,8 +65,8 @@ li{
 }
 
 .menu-item:hover{
-	background-color: rgba(0,0,0,0.9);
-	color: rgba(0,0,0,0.4);
+	background-color: rgba(0,0,0,0.8);
+	color: rgba(0,0,0,0.5);
 }
 
 
@@ -80,7 +80,7 @@ li{
 	width: auto;
 	height: auto;
 	color: black;
-	background-color: rgba(0,0,0,0.2);
+	background-color: rgba(0,0,0,0.4);
 	font-family: "Comic Sans MS", cursive, sans-serif;
 	padding: 20px;
 }
