--- a/style.css
+++ b/style.css
@@ -5,12 +5,12 @@
 
 .navbar{
 	border-radius: 0px;
-	background-color: rgba(0,0,0,0.6);
+	background-color: rgb(255,0,0);
 }
 
 .navbar-brand{
   font-size: 35px;
-  color: SteelBlue;
+  color: white;
   padding-left: 25px;
 }
 
@@ -65,8 +65,8 @@ li{
 }
 
 .menu-item:hover{
-	background-color: rgba(0,0,0,0.8);
-	color: rgba(0,0,0,0.5);
+	background-color: rgb(255,240,245);
+	color: rgb(216,191,216);
 }
 
 
@@ -80,7 +80,7 @@ li{
 	width: auto;
 	height: auto;
 	color: black;
-	background-color: rgba(0,0,0,0.4);
+	background-color: rgb(0,0,0);
 	font-family: "Comic Sans MS", cursive, sans-serif;
 	padding: 20px;
 }
