--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 
 .navbar{
 	border-radius: 0px;
-	background-color: rgb(255,0,0);
+	background-color: rgba(0,0,0,0.8);
 }
 
 .navbar-brand{
@@ -43,7 +43,7 @@
 .main-title{
   margin-bottom: 15px;
   text-align: center;
-  color: #FF4500;
+  color: #ff4532;
   font-size: 50px;
   font-family: "Comic Sans MS", cursive, sans-serif;
   font-weight: bold;
@@ -65,8 +65,8 @@ li{
 }
 
 .menu-item:hover{
-	background-color: rgb(255,240,245);
-	color: rgb(216,191,216);
+	background-color: rgba(0,0,0,0.9);
+	color: rgba(0,0,0,0.4);
 }
 
 
@@ -80,7 +80,7 @@ li{
 	width: auto;
 	height: auto;
 	color: black;
-	background-color: rgb(0,0,0);
+	background-color: rgba(0,0,0,0.2);
 	font-family: "Comic Sans MS", cursive, sans-serif;
 	padding: 20px;
 }
