--- a/style.css
+++ b/style.css
@@ -5,17 +5,17 @@ container-fluid{
 
 .navbar{
 	border-radius: 0px;
-	background-color: rgb(0,0,0);
+	background-color: rgba(0,0,0,0.8);
 }
 
 .navbar-brand{
   font-size: 35px;
-  color: white;
+  color: SeaGreen;
   padding-left: 25px;
 }
 
 .navbar-brand:hover{
-	color: white;
+	color: SeaGreen;
 }
 
 .nav{
